--- a/src/pages/user/tableEmploye.css
+++ b/src/pages/user/tableEmploye.css
@@ -55,3 +55,17 @@ span.plus {
     margin-bottom: 2px;
     font-size: 20px;
 }
+
+.employe__item.header * {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+
+}
+
+.svgHeader {
+    padding: 0;
+    margin: 0;
+    margin-left: 5px;
+}
